--- a/src/pages/MainScreen/index.css
+++ b/src/pages/MainScreen/index.css
@@ -51,3 +51,13 @@
     bottom: 10px;
     right: 10px;
 }
+
+.main-screen-logo {
+    position: fixed;
+    top: 10px;
+    z-index: 999;
+    pointer-events: none;
+    max-width: 40vw;
+    min-width: 400px;
+    max-height: 25vh;
+}
