touch screen support has been introduced ,design sensitivity has been changed to be used at full efficiency up to 800*600

--- a/src/pages/SalesDashboard/SalesDashboardRightArea/index.css
+++ b/src/pages/SalesDashboard/SalesDashboardRightArea/index.css
@@ -16,14 +16,18 @@
 
 .sales-dashboard-right-area-control {
     display: flex;
+    justify-content: center;
     flex-direction: row;
-    gap: 10px;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
+    gap: 3px;
+}
+
+.sales-dashboard-right-area-control * {
+    min-height: 0 !important;
 }
 
 .sales-dashboard-right-area-control > * {
-    min-width: 0 !important;
-    min-height: 0 !important;
+    max-width: 100px !important;
 }
 
 .sales-dashboard-right-area-campaigns {
