--- a/src/shared/components/ScreenKeyboard/screenKeyboard.css
+++ b/src/shared/components/ScreenKeyboard/screenKeyboard.css
@@ -1,9 +1,7 @@
-
 .screen-keyboard-container {
     z-index: 999999;
     position: fixed;
     box-sizing: border-box;
-    width: 100%;
     min-width: 750px;
     height: 255px;
     background-color: #12161B;
@@ -18,6 +16,10 @@
     bottom: 0;
     left: 0;
     will-change: transform;
+}
+
+.screen-keyboard-container.fullwidth {
+    width: 100% !important;
 }
 
 .screen-keyboard-close-button {
