--- a/src/pages/SalesDashboard/index.css
+++ b/src/pages/SalesDashboard/index.css
@@ -4,3 +4,21 @@
     justify-content: space-between;
     padding: 1px;
 }
+
+@media (max-width: 700px) {
+    .sales-dashboard-container {
+        flex-direction: column;
+        overflow: auto !important;
+        width: 100%;
+        height: 100%;
+    }
+
+    .left-container,
+    .sales-dashboard-middle-area-container,
+    .sales-dashboard-right-area-container {
+        width: 100%;
+        height: 100%;
+        max-width: 100% !important;
+        overflow-y: unset !important;
+    }
+}
