--- a/src/pages/PaymentDashboard/PaymentDashboardLeftArea/components/DigitalArea/digitalArea.css
+++ b/src/pages/PaymentDashboard/PaymentDashboardLeftArea/components/DigitalArea/digitalArea.css
@@ -2,7 +2,7 @@
     font-family: 'VT323', 'Noto Emoji', serif !important;
     box-sizing: border-box;
     padding-top: 20px;
-    max-width: 33vw;
+    max-width: 700px;
     min-width: 200px;
     display: flex;
     flex-direction: column;
